updated docker file location in docker build

--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -31,5 +31,6 @@ jobs:
             with:
                 push: true
                 context: .
+                file: docker/Dockerfile_API
                 platforms: linux/amd64,linux/arm64
                 tags: aptrsproject/aptrs:latest
