--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -40,5 +40,6 @@ jobs:
             with:
                 push: true
                 context: .
+                file: docker/Dockerfile_API
                 platforms: linux/amd64,linux/arm64
                 tags: ${{ steps.release.outputs.tag }}
