--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -3,43 +3,50 @@ name: 'Build and Publish Release to DockerHub'
 on:
   release:
     types: [created]
+  workflow_dispatch:
+
 
 jobs:
-    buildx:
-        runs-on: ubuntu-latest
-        steps:
-        -
-            name: Checkout
-            uses: actions/checkout@v3
-        - 
-            name: Set up QEMU
-            uses: docker/setup-qemu-action@v3
-        -   
-            name: Set up Docker Buildx
-            uses: docker/setup-buildx-action@v3
-        -
-            name: Login to DockerHub
-            uses: docker/login-action@v3
-            with:
-                username: ${{ secrets.DOCKER_USERNAME }}
-                password: ${{ secrets.DOCKER_TOKEN }}
-        -
-            name: Get Release Tag
-            id: release
-            run: |
-              DOCKER_IMAGE=aptrsproject/aptrs
-              if [[ $GITHUB_REF == refs/tags/* ]]; then
-                VERSION=${GITHUB_REF#refs/tags/v}
-                TAG="${DOCKER_IMAGE}:v${VERSION}"
-              fi
-              echo "tag=${TAG}" >> $GITHUB_OUTPUT
-        -
-            name: Build and push AMD64, ARM64 image release
-            id: docker_build
-            uses: docker/build-push-action@v5
-            with:
-                push: true
-                context: .
-                file: docker/Dockerfile_API
-                platforms: linux/amd64,linux/arm64
-                tags: ${{ steps.release.outputs.tag }}
+  buildx:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Get Release Tag
+        id: release
+        run: |
+          DOCKER_IMAGE=aptrsproject/aptrs
+          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/}
+            TAG="${DOCKER_IMAGE}:${VERSION}"
+          else
+            echo "Not a tag, skipping."
+            exit 1
+          fi
+          echo "tag=${TAG}" >> $GITHUB_OUTPUT
+
+      - name: Debug Tag
+        run: echo "Tag: ${{ steps.release.outputs.tag }}"
+
+      - name: Build and push AMD64, ARM64 image release
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          context: .
+          file: docker/Dockerfile_API
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ steps.release.outputs.tag }}
