--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -4,6 +4,11 @@ on:
   release:
     types: [created]
   workflow_dispatch: # Allows manual triggering of the workflow
+    inputs:
+      version:
+        description: 'Version to tag the Docker image'
+        required: false
+        default: ''
 
 jobs:
   buildx:
