--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-phone-number-input": "^3.3.8",
+    "react-select": "^5.10.1",
     "styled-components": "^5.3.11",
     "tailwindcss": "^3.3.5",
     "typescript": "^4.9.5",
