--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -44,5 +44,5 @@ jobs:
         if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: frontend-build
+          name: frontend-build-${{ github.run_number }}
           path: frontend/dist
