--- a/APTRS/env.example
+++ b/APTRS/env.example
@@ -17,3 +17,11 @@ AWS_STORAGE_BUCKET_NAME=''
 AWS_S3_REGION_NAME=''
 AWS_S3_CUSTOM_DOMAIN=''
 AWS_S3_ENDPOINT_URL=''
+EMAIL_HOST=''
+EMAIL_PORT=
+EMAIL_USE_TLS=
+USE_EMAIL=False
+EMAIL_HOST_USER=''
+EMAIL_HOST_PASSWORD=''
+DEFAULT_FROM_EMAIL=''
+FRONTEND_URL=''
