Add email configuration variables to docker-compose and env files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,14 @@ services:
       AWS_S3_REGION_NAME: ${AWS_S3_REGION_NAME}
       AWS_S3_CUSTOM_DOMAIN: ${AWS_S3_CUSTOM_DOMAIN}
       AWS_S3_ENDPOINT_URL: ${AWS_S3_ENDPOINT_URL}
+      EMAIL_HOST: ${EMAIL_HOST}
+      EMAIL_PORT: ${EMAIL_PORT}
+      EMAIL_USE_TLS: ${EMAIL_USE_TLS}
+      USE_EMAIL: ${USE_EMAIL}
+      EMAIL_HOST_USER: ${EMAIL_HOST_USER}
+      EMAIL_HOST_PASSWORD: ${EMAIL_HOST_PASSWORD}
+      DEFAULT_FROM_EMAIL: ${DEFAULT_FROM_EMAIL}
+      FRONTEND_URL: ${FRONTEND_URL}
       USE_DOCKER: "True"
     depends_on:
       - postgres
