--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -33,8 +33,6 @@ jobs:
       - name: Install dependencies
         working-directory: frontend
         run: npm install
-
-      # Build the frontend
       - name: Build the frontend
         working-directory: frontend
         run: npm run build
@@ -44,5 +42,5 @@ jobs:
         if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: frontend-build-${{ github.run_number }}
+          name: frontend-build-node-${{ matrix.node-version }}-${{ github.run_number }}
           path: frontend/dist
