--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -12,10 +12,10 @@ jobs:
         -
             name: Checkout
             uses: actions/checkout@v3
-        - 
+        -
             name: Set up QEMU
             uses: docker/setup-qemu-action@v3
-        -   
+        -
             name: Set up Docker Buildx
             uses: docker/setup-buildx-action@v3
         -
@@ -23,18 +23,37 @@ jobs:
             uses: docker/login-action@v3
             with:
                 username: ${{ secrets.DOCKER_USERNAME }}
-                password: ${{ secrets.DOCKER_TOKEN }}
-        -
+                password: ${{ secrets.DOCKER_TOKEN }}        -
             name: Get Release Tag
             id: release
             run: |
               DOCKER_IMAGE=aptrsproject/aptrs
-              echo "Release version: ${{ github.event.release.tag_name }}"
-              if [[ $GITHUB_REF == refs/tags/* ]]; then
-                VERSION=${GITHUB_REF#refs/tags/v}
-                TAG="${DOCKER_IMAGE}:v${VERSION}"
+              # Handle release event
+              if [[ "${{ github.event_name }}" == "release" ]]; then
+                echo "Processing release: ${{ github.event.release.tag_name }}"
+                VERSION=${{ github.event.release.tag_name }}
+                # Remove 'v' prefix if it exists
+                VERSION=${VERSION#v}
+                VERSION_TAG="${DOCKER_IMAGE}:v${VERSION}"
+                LATEST_TAG="${DOCKER_IMAGE}:latest"
+                TAGS="${VERSION_TAG},${LATEST_TAG}"
+              # Handle workflow_dispatch
+              else
+                echo "Processing manual workflow dispatch"
+                if [[ $GITHUB_REF == refs/tags/* ]]; then
+                  VERSION=${GITHUB_REF#refs/tags/v}
+                  VERSION_TAG="${DOCKER_IMAGE}:v${VERSION}"
+                  LATEST_TAG="${DOCKER_IMAGE}:latest"
+                  TAGS="${VERSION_TAG},${LATEST_TAG}"
+                else
+                  # Default to latest for manual runs without tags
+                  TAGS="${DOCKER_IMAGE}:latest"
+                fi
               fi
-              echo "tag=${TAG}" >> $GITHUB_OUTPUT
+
+              # Output the tags for next steps
+              echo "tags=${TAGS}" >> $GITHUB_OUTPUT
+              echo "Will push with tags: ${TAGS}"
         -
             name: Build and push AMD64, ARM64 image release
             id: docker_build
@@ -44,4 +63,9 @@ jobs:
                 context: .
                 file: docker/Dockerfile_API
                 platforms: linux/amd64,linux/arm64
-                tags: ${{ steps.release.outputs.tag }}
+                tags: ${{ steps.release.outputs.tags }}
+        -
+            name: Verify Build
+            run: |
+              echo "Image digest: ${{ steps.docker_build.outputs.digest }}"
+              echo "Build completed successfully!"
