--- a/APTRS/env.example
+++ b/APTRS/env.example
@@ -1,6 +1,6 @@
 SECRET_KEY='3-3hnf1kkn#x0350(we+9^m@69xc3_e_@_7$2tf=d)6$i*t_0#'
 WHITELIST_IP= ["http://127.0.0.1:8080","http://127.0.0.1","http://127.0.0.1:443"]
-ALLOWED_HOST = ["127.0.0.1","localhost","aptrsapi.souravkal.tech","*"]  
+ALLOWED_HOST = ["127.0.0.1","localhost","aptrsapi.souravkal.tech","*"]
 CORS_ORIGIN = ["http://127.0.0.1:8080", "https://aptrsapi.souravkalal.tech","http://127.0.0.1:5000"]
 REDIS_URL='redis://:q8N8HwlaOWqOl1hG7rdmBsm7oT52fLKHZXFwOB4VM7SXFDV8wg@127.0.0.1:6379/'
 POSTGRES_USER="aptrs_user"
@@ -18,8 +18,8 @@ AWS_S3_REGION_NAME=''
 AWS_S3_CUSTOM_DOMAIN=''
 AWS_S3_ENDPOINT_URL=''
 EMAIL_HOST=''
-EMAIL_PORT=
-EMAIL_USE_TLS=
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
 USE_EMAIL=False
 EMAIL_HOST_USER=''
 EMAIL_HOST_PASSWORD=''
