Normalize repository owner in GitHub Container Registry tag to lowercase

--- a/.github/workflows/ghcr-latest.yml
+++ b/.github/workflows/ghcr-latest.yml
@@ -29,4 +29,4 @@ jobs:
           file: docker/Dockerfile_API
           platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/${{ github.repository_owner }}/aptrs:latest
+            ghcr.io/${{ github.repository_owner | lower }}/aptrs:latest
