--- a/.github/workflows/ghcr-latest.yml
+++ b/.github/workflows/ghcr-latest.yml
@@ -9,12 +9,17 @@ jobs:
   buildx:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+    - name: Checkout
         uses: actions/checkout@v3
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+      - name: Set lower case owner name
+        run: |
+          echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+        env:
+          OWNER: '${{ github.repository_owner }}'
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -25,8 +30,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          context: .
-          file: docker/Dockerfile_API
+          context: .          file: docker/Dockerfile_API
           platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/${{ github.repository_owner | lower }}/aptrs:latest
+            ghcr.io/${{ env.OWNER_LC }}/aptrs:latest
