--- a/.github/workflows/ghcr-latest.yml
+++ b/.github/workflows/ghcr-latest.yml
@@ -18,11 +18,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Set lower case owner name
-        run: |
-          echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
-        env:
-          OWNER: '${{ github.repository_owner }}'
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -39,4 +34,4 @@ jobs:
           file: docker/Dockerfile_API
           platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/${{ env.OWNER_LC }}/aptrs:latest
+            ghcr.io/aptrs/aptrs:latest
