--- a/.github/workflows/ghcr-latest.yml
+++ b/.github/workflows/ghcr-latest.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+# Add permissions block
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   buildx:
